@@ -1,43 +1,39 @@
 Content-Type: text/html; charset=ISO-8859-1
 
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
     <head>
-        <meta http-equiv="content-type" content="text/html;charset=ISO-8859-1" />
-        <link rel="alternate" type="application/rss+xml" title="RSS" href="http://localhost/index.rss" />
-        <title>My Weblog   
-        </title>
+        <meta http-equiv="content-type" content="text/html;charset=ISO-8859-1" >
+        <link rel="alternate" type="application/rss+xml" title="RSS" href="http://localhost/index.rss" >
+        <title>My Weblog   </title>
     </head>
     <body>
-        <center>
-            <font size="+3">My Weblog</font><br />
-              
-        </center>
-        <p />
-        <h3>Tue, 25 Jul 2006</h3>
-       <p>
-           <a name="baz"><b>Lorem ipso</b></a><br />
-           Lorem ipso hoccer foer tyr wuz de ras cora dola tymon ipso hoc cer fuz
+        <div align="center">
+            <h1>My Weblog</h1>
+            <p>  </p>
+        </div>
+        <h2>Tue, 25 Jul 2006</h2>
+        <div>
+            <h3><a name="baz">Lorem ipso</a></h3>
+            <div>Lorem ipso hoccer foer tyr wuz de ras cora dola tymon ipso hoc cer fuz
 de ramas cora dola tymon ipso hoccer. Lorem ipso foer tyr wuz de ramas
 cora dola tym ipso hor.Lorem ipso foer tyr wuz de ramas cora dola tym
 ipso hor tyr wuz de ramas cora dola tymon ipso foer tyr wuz de ramas
 cora dola tymo. Lorem ipso hoccer foer tyr wuz de ras cora dola tymon
 ipso hoc cer fuz de ramas cora dola tymon ipso hoccer. Lorem ipso foer
-tyr wuz de ramas cora dola tym ipso hor.<br />
-           <br />
-           posted at: 11:03 | path: <a href="http://localhost/foo">/foo </a> | <a href="http://localhost/2006/07/25#baz">permanent link to this entry</a>
-       </p>
-       <p>
-           <a name="bar"><b>Lorem ipsum</b></a><br />
-           Lorem ipsum dolor sit amet ipso facto.Lorem ipsum dolor sit amet ipso
+tyr wuz de ramas cora dola tym ipso hor.</div>
+            <p>posted at: 11:03 | path: <a href="http://localhost/foo">/foo</a> | <a href="http://localhost/2006/07/25#baz">permanent link to this entry</a></p>
+        </div>
+        <div>
+            <h3><a name="bar">Lorem ipsum</a></h3>
+            <div>Lorem ipsum dolor sit amet ipso facto.Lorem ipsum dolor sit amet ipso
 facto.Lorem ipsum dolor sit amet ipso facto. Lorem ipsum dolor sit
-amet ipso facto.Lorem ipsum dolor sit amet ipso facto. <br />
-           <br />
-           posted at: 11:02 | path: <a href="http://localhost/foo">/foo </a> | <a href="http://localhost/2006/07/25#bar">permanent link to this entry</a>
-       </p>
+amet ipso facto.Lorem ipsum dolor sit amet ipso facto. </div>
+            <p>posted at: 11:02 | path: <a href="http://localhost/foo">/foo</a> | <a href="http://localhost/2006/07/25#bar">permanent link to this entry</a></p>
+        </div>
 
-        <p />
-        <center>
-            <a href="http://blosxom.sourceforge.net/"><img src="http://blosxom.sourceforge.net/images/pb_blosxom.gif" border="0" /></a>
-        </center>
+        <div align="center">
+            <a href="http://blosxom.sourceforge.net/"><img src="http://blosxom.sourceforge.net/images/pb_blosxom.gif" alt="powered by blosxom" border="0" width="90" height="33" ></a>
+        </div>
     </body>
 </html>
