@@ -4,9 +4,8 @@ Content-Type: text/xhtml; charset=UTF-8
           "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
     <head>
-        <link rel="alternate" type="application/rss+xml" title="RSS" href="http://localhost/index.rss" />
-        <title>My Weblog   
-        </title>
+        <link rel="alternate" type="application/rss+xml" title="RSS" href="http://localhost/index.rss" >
+        <title>My Weblog   </title>
     </head>
     <body>
         <h1>My Weblog</h1>
